# okasaki-hs

./: .gitignore  Makefile  README.md  okasaki-hs.cabal
app/: Main.hs
bench/: Main.hs
bench/Bench/: Ch02.hs
bench/Bench/Ch02/: Ex2_1.hs  Ex2_2.hs
src/: Okasaki.hs
src/Okasaki/Ch02/: Ex2_1.hs  Ex2_2.hs  Ex2_3.hs  Ex2_4.hs  Ex2_5.hs  Ex2_5A.hs  Ex2_5B.hs  Ex2_6.hs
src/Okasaki/Ch02/Data/: Tree.hs  UnbalancedSet.hs
src/Okasaki/Ch02/Data/FiniteMap/: Class.hs
src/Okasaki/Ch02/Data/Set/: Class.hs
src/Sandbox/: Criterion1.hs  Fib1.hs  HPC1.hs
test/: Test.hs
test/Test/: Ch02.hs
test/Test/Ch02/: Ex2_1.hs  Ex2_2.hs
test/Test/Support/: Gen.hs
