cabal-version:       3.0
name:                okasaki
version:             0.1.0.0
synopsis:            Working through Purely Functional Data Structures
description:         My notes and solutions for "Purely Functional Data Structures" book by Chris Okasaki (in Haskell).
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              Vasiliy Yorkin
maintainer:          vasiliy.yorkin@gmail.com
copyright:           2020 Vasiliy Yorkin
-- category:
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/vyorkin/okasaki-hs.git

common base
  build-depends:       base
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       DerivingStrategies
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
                       NoStarIsType
                       BlockArguments

common aux
  import:              base
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wmissing-deriving-strategies
                       -Wpartial-fields
                       -Wmissing-home-modules
                       -- Our test convention for HUnit would make it
                       -- unnecessarily verbose to add the signature of each test
                       -fno-warn-missing-signatures
                       -- Delegate to Tasty to discover tests
                       -fno-warn-missing-export-lists

library
  import:              base
  hs-source-dirs:      src
  exposed-modules:     Okasaki
                       Okasaki.Ch02.Data.Set.Class
                       Okasaki.Ch02.Data.UnbalancedSet
                       Okasaki.Ch02.Data.Tree

                       Okasaki.Ch02.Ex2_1
                       Okasaki.Ch02.Ex2_2
                       Okasaki.Ch02.Ex2_3
                       Okasaki.Ch02.Ex2_4
                       Okasaki.Ch02.Ex2_5A
                       Okasaki.Ch02.Ex2_5B
                       Okasaki.Ch02.Ex2_6

                       Sandbox.Criterion1
  build-depends:       base ^>= 4.13
                     , text ^>= 1.2
                     , bytestring ^>= 0.10
                     , time ^>= 1.9
                     , containers ^>= 0.6
                     , deepseq ^>= 1.4
                     , criterion ^>= 1.5
                     , pretty-simple ^>= 3.3
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

executable okasaki
  import:              base
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , okasaki
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

test-suite okasaki-test
  import:              aux
  type:                exitcode-stdio-1.0
  build-depends:     , okasaki
                     , text
                     , bytestring
                     , Glob
                     , prettyprinter
                     , filepath
                     , hedgehog
                     , tasty
                     , tasty-golden
                     , tasty-expected-failure
                     , tasty-hedgehog
                     , doctest
                     , cabal-doctest
  hs-source-dirs:      test
  other-modules:       Test.Ch02
                         Test.Ch02.Ex2_1
                         Test.Ch02.Ex2_2

                       Test.Support.Gen
  main-is:             Test.hs

benchmark okasaki-bench
  import:              aux
  import:              base
  type:                exitcode-stdio-1.0
  build-depends:     , okasaki
                     , criterion
  main-is:             Main.hs
  other-modules:       Bench.Ch02
                         Bench.Ch02.Ex2_1
                         Bench.Ch02.Ex2_2
  hs-source-dirs:      bench
